Implemented a second instance of SimplestIntersection for testing. Implemented simple reward function. Trained PPO and A2C models for testing. Need to rework what's recorded in the gym environment for better compairons.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ _sumo/__pycache__/simplest_intersection_simulation.cpython-38.pyc
 __pycache__
 _env/__pycache__/simplest_intersection.cpython-38.pyc
 _sumo/__pycache__/simplest_intersection_simulation.cpython-38.pyc
+_env/__pycache__/simplest_intersection.cpython-38.pyc
